--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -25,9 +25,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 # switch to Stretch.
 RUN if grep -q Debian /etc/os-release && grep -q jessie /etc/os-release; then \
 	rm /etc/apt/sources.list \
-    && echo "deb http://archive.debian.org/debian/ jessie main" >> /etc/apt/sources.list \
-    && echo "deb http://archive.debian.org/debian-security/ jessie/updates main" >> /etc/apt/sources.list \
-    && echo "deb http://archive.debian.org/debian/ jessie-updates main" >> /etc/apt/sources.list \
+    && echo "deb http://deb.debian.org/debian/ jessie main" >> /etc/apt/sources.list \
 	; fi
 
 # man directory is missing in some base images
@@ -190,4 +188,4 @@ RUN sdkmanager \
   "build-tools;28.0.3"
 
 # API_LEVEL string gets replaced by m4
-RUN sdkmanager "platforms;android-23"
+RUN sdkmanager "platforms;android-27"
